   * Update Brazil translation - thx igorruckert
   * Update Whisper cpp to v1.2.0
   * "Multiple replace" apply button now changes main window - thx Sopor
   * Set ITT default time code format to frames - thx chenlung 
   * Try to handle large ASSA files better - thx MMT
   * Improve double-click-word-select in syntax color text box - thx Janusz/von Suppé
* FIXED:
   * Fix extra space after font in EBU STL - thx Stefan
   * Fix Korean in installer - thx 슈니
   * Fix Japanese in installer - thx homunet
   * Fix for SSA style - thx Amstramgram
   * Fix possible crash in batch convert w overwrite - thx chensimmons
   * Fix issue with continuation style suffix "..." and comma - thx Edwin


3.6.11 (30th January 2023)
* NEW:
   * Add File - Close translated subtitle - thx zcraber/Leon 
   * Add auto-naming rule for translation - thx Leon/OmrSi
   * Add more Whisper post-processing
   * Add line merge option for Google Cloud Vision OCR
   * Add new subtitle format - thx Christophe
   * Add new subtitle format - thx Chris
   * Add ASSA style "Replace" - thx Mishasama
   * Add "audio to text selected lines" shortcuts
   * Add Vosk Korean/Uzbek/large-Hindi models
* IMPROVED:
   * Update Chinese translation - thx nkh0472
   * Update Korean translation - thx domddol
   * Update Italian translation - thx bovirus
   * Update Polish translation - thx admas
   * Update Portuguese translation - thx hugok79
   * Update Finnish translation - thx Teijo S
   * Update Hungarian translation - thx Zityi
   * Update French translation - thx Pierre
   * Update Bulgarian translation - thx Калин
   * Update Greek translation - thx PMitsakis
   * Improve DVB in mkv (fix batch/cmd convert + pos) - thx antoniu200
   * Better ffmpeg detection - thx SMSourov
   * Avoid standby a few places - thx mpek
   * Optimize ASSA style import
   * Improve line split a little - thx i990049
   * Add a few English words/names to dictionaries
   * Make formatting shortcuts in waveform work on selected lines